--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
     "@mui/styles": "^6.3.0",
-    "@mui/system": "^6.3.0",           // Added explicitly
+    "@mui/system": "^6.3.0",           
     "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
-    "material-table": "^1.63.0",       // Note: This may need updating or replacement
+    "material-table": "^1.63.0",      
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
@@ -23,7 +23,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "^3.0.1",         // Consider updating this (see notes)
+    "react-scripts": "^3.0.1",        
     "recharts": "^2.15.0",
     "sass": "^1.83.0",
     "web-vitals": "^4.2.4",
