--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "^3.0.1",        
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
     "sass": "^1.83.0",
     "web-vitals": "^4.2.4",
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build"
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
