--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
     "@mui/styles": "^6.3.0",
-    "@mui/system": "^6.3.0",           
+    "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
-    "material-table": "^1.63.0",      
+    "js-cookie": "^3.0.5",
+    "material-table": "^1.63.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
