--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
+    "moment": "^2.29.4",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
