--- a/package.json
+++ b/package.json
@@ -3,33 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.0",
-    "@mui/lab": "^6.0.0-beta.21",
-    "@mui/material": "^6.3.0",
-    "@mui/styles": "^6.3.0",
-    "@mui/system": "^6.3.0",
-    "@mui/x-data-grid": "^7.23.5",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.15.10",
+    "@mui/system": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.4",
     "@react-pdf/renderer": "^3.1.14",
-    "moment": "^2.29.4",
-    "axios": "^1.8.4",
+    "@reduxjs/toolkit": "^2.2.1",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.6.7",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
-    "material-table": "^1.63.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "material-table": "^1.69.3",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.2.0",
-    "react-icons": "^5.4.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.15.0",
-    "sass": "^1.83.0",
-    "web-vitals": "^4.2.4",
+    "react-i18next": "^14.0.5",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.12.0",
+    "sass": "^1.71.0",
+    "web-vitals": "^3.5.2",
     "xlsx": "^0.18.5"
   },
   "scripts": {
@@ -57,6 +59,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.1"
   }
 }
