--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "sass": "^1.71.0",
     "web-vitals": "^3.5.2",
@@ -61,10 +62,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "terser-webpack-plugin": "^5.3.10",
-    "babel-loader": "^9.1.3",
     "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3"
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "tailwindcss": "^3.4.1",
+    "terser-webpack-plugin": "^5.3.10"
   }
 }
