--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "sass": "^1.71.0",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^3.5.2",
     "xlsx": "^0.18.5"
   },
