--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@mui/styles": "^5.15.10",
     "@mui/system": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^8.11.3",
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.2.1",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.6.7",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
-    "material-table": "^1.69.3",
+    "material-table": "^2.0.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +34,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "sass": "^1.71.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^3.5.2",
