--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "sass": "^1.71.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^3.5.2",
+    "workbox-webpack-plugin": "^7.3.0",
+    "workbox-window": "^7.3.0",
     "xlsx": "^0.18.5"
   },
   "scripts": {
